--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.trib3.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>example-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
