--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.trib3.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>example-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -29,14 +29,6 @@
 
         <dependency>
             <groupId>com.trib3</groupId>
-            <artifactId>db</artifactId>
-            <version>${version.leakycauldron}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.trib3</groupId>
             <artifactId>json</artifactId>
             <version>${version.leakycauldron}</version>
             <scope>test</scope>
@@ -48,7 +40,7 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.authzee.kotlinguice4</groupId>
+            <groupId>dev.misfitlabs.kotlinguice4</groupId>
             <artifactId>kotlin-guice</artifactId>
         </dependency>
         <dependency>
@@ -82,7 +74,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- test logging -->
+        <!-- test -->
+        <dependency>
+            <groupId>com.trib3</groupId>
+            <artifactId>testing</artifactId>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
