--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.trib3.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>example-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>com.trib3</groupId>
-            <artifactId>server</artifactId>
+            <artifactId>graphql</artifactId>
             <version>${version.leakycauldron}</version>
         </dependency>
 
@@ -57,12 +57,8 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.authzee.kotlinguice4</groupId>
+            <groupId>dev.misfitlabs.kotlinguice4</groupId>
             <artifactId>kotlin-guice</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.authzee.kotlinguice4</groupId>
-            <artifactId>kotlin-guice-multibindings</artifactId>
         </dependency>
 
         <dependency>
