Update to leakycauldron 1.6.x

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -84,6 +84,10 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-reactive</artifactId>
         </dependency>
     </dependencies>
