--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:11-jdk
+      - image: cimg/openjdk:11.0
 
     working_directory: ~/repo
     environment:
@@ -82,7 +82,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/python:3.6 # more likely to already be on the new host than the java image
+      - image: cimg/openjdk:11.0
     steps:
       - attach_workspace:
           at: ~/jars
