--- a/.editorconfig
+++ b/.editorconfig
@@ -3,5 +3,4 @@ indent_size=4
 continuation_indent_size=4
 insert_final_newline=true
 max_line_length=120
-# https://github.com/pinterest/ktlint/issues/527
-disabled_rules=import-ordering
+ij_kotlin_imports_layout=*,java.**,javax.**,kotlin.**,^
