--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -44,8 +44,8 @@
             <artifactId>kotlin-guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
         </dependency>
 
         <!-- metrics -->
